--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="content_hours">
+          <div class="hours">
             <p>Hours:</p>
             <p>Monday - Friday (10:00 - 19:00)</p>
             <p>Saturday - Sunday (11:00 - 18:00)</p>
