--- a/index.html
+++ b/index.html
@@ -28,21 +28,22 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Recipes</a>
+              <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="nav__link">Book a table</a>
+              <a class="nav__link" href="#table">Book a table</a>
             </li>
             <li>
-              <a class="nav__link">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="nav__link">Contacts</a>
+              <a class="nav__link" href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
         <h1 class="header__title">
-          Specialty coffee in the Triple Peaks Library
+          <span class="outline">Specialty coffee</span> in the Triple Peaks
+          Library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
@@ -54,10 +55,10 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="hours">
-            <p>Hours:</p>
-            <p>Monday - Friday (10:00 - 19:00)</p>
-            <p>Saturday - Sunday (11:00 - 18:00)</p>
+          <div>
+            <p class="hours">Hours:</p>
+            <p class="hours">Monday - Friday (10:00 - 19:00)</p>
+            <p class="hours">Saturday - Sunday (11:00 - 18:00)</p>
           </div>
           <p class="header__address">
             200 Success Avenue, The Town of Triple Peaks
@@ -65,10 +66,40 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
-        <section class="book a table"></section>
-        <section class="menu"></section>
-        <section class="contacts"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <div class="recipes__videos">
+            <div>
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Ya-nESNB9DRR-6UT"
+                title="youtube video player"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span> ~5 min
+              </p>
+            </div>
+            <div>
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=l4BuuWknyCPX4HBg"
+                title="youtube video player"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span> ~15 min
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="book a table" id="table"></section>
+        <section class="menu" id="menu"></section>
+        <section class="contacts" id="contacts"></section>
       </main>
       <footer class="footer"></footer>
     </div>
