--- a/index.html
+++ b/index.html
@@ -97,7 +97,53 @@
             </div>
           </div>
         </section>
-        <section class="book a table" id="table"></section>
+        <section class="reservation" id="table">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label"
+                >Name *
+                <input
+                  type="text"
+                  id="name"
+                  class="form__input"
+                  placeholder="Name Surname"
+                />
+              </label>
+              <label for="number" class="form__label"
+                >Number of guest *
+                <input
+                  type="number"
+                  id="number"
+                  class="form__input"
+                  placeholder="1-8"
+                />
+              </label>
+              <label for="date" class="form__label"
+                >Date & time *
+                <input
+                  type="datetime-local"
+                  id="date"
+                  class="form__input form__input_datetime-local"
+                />
+              </label>
+              <label for="email" class="form__label"
+                >Your email *
+                <input
+                  type="email"
+                  id="email"
+                  class="form__input"
+                  placeholder="email@email.com"
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="agree" class="form__label form__label_type_checkbox">
+              <input type="checkbox" id="agree" class="form__checkbox" />I agree
+              with the terms of use
+            </label>
+          </form>
+        </section>
         <section class="menu" id="menu"></section>
         <section class="contacts" id="contacts"></section>
       </main>
