--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="keywords" content="HTML, CSS, BEM, Project Coffee" />
     <meta name="author" content="Larry Piper" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Coffee Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -144,10 +143,174 @@
             </label>
           </form>
         </section>
-        <section class="menu" id="menu"></section>
-        <section class="contacts" id="contacts"></section>
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collection are $2/cup.
+          </p>
+          <ul class="menu__cards">
+            <li class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list-item">
+                <li>
+                  Regular<span class="card__list-divider"></span>
+                  $1
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Large (16 oz)<span class="card__list-divider"></span>
+                  $1.25
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  XL (20 oz)<span class="card__list-divider"></span>
+                  $1.5
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Party-size (24 oz, decaf)<span
+                    class="card__list-divider"
+                  ></span>
+                  $1.75
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Iced Coffee (16 oz)<span class="card__list-divider"></span>
+                  $1.25
+                </li>
+              </ul>
+            </li>
+            <li class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list-item">
+                <li>
+                  Macchiato<span class="card__list-divider"></span>
+                  $2.25
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Cortado<span class="card__list-divider"></span>
+                  $2.5
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Mocha<span class="card__list-divider"></span>
+                  $3
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Sunrise in the Bay Area<span
+                    class="card__list-divider"
+                  ></span>
+                  $10
+                </li>
+              </ul>
+            </li>
+            <li class="card">
+              <h3 class="card__title">Baker Goods</h3>
+              <ul class="card__list-item">
+                <li>
+                  Almond Croissant<span class="card__list-divider"></span>
+                  $2
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Banana Bread<span class="card__list-divider"></span>
+                  $1.75
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Key Lime Pie<span class="card__list-divider"></span>
+                  $3
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Blue Velvet Cake<span class="card__list-divider"></span>
+                  $3.75
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Web Cookie<span class="card__list-divider"></span>
+                  $2
+                </li>
+              </ul>
+              <ul class="card__list-item">
+                <li>
+                  Fresh Bug'uette<span class="card__list-divider"></span>
+                  $0.25
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <section class="about" id="contacts">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact - so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <div>
+            <img
+              src="./images/logo_coffeeshop_light.svg"
+              alt="Triple Peaks Library"
+              class="footer__logo"
+            />
+          </div>
+
+          <div>
+            <h3 class="footer__social-heading">Social media</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook Logo"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram Logo"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&copy; 2024 Larry Piper</p>
+      </footer>
     </div>
   </body>
 </html>
