--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="keywords" content="HTML, CSS, BEM, Project Coffee" />
     <meta name="author" content="Larry Piper" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" type="text/css" href="./pages/index.css" />
     <title>Coffee Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
   </head>
   <body>
