--- a/index.html
+++ b/index.html
@@ -153,34 +153,34 @@
           <ul class="menu__cards">
             <li class="card">
               <h3 class="card__title">Filter</h3>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Regular<span class="card__list-divider"></span>
                   $1
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Large (16 oz)<span class="card__list-divider"></span>
                   $1.25
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   XL (20 oz)<span class="card__list-divider"></span>
                   $1.5
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Party-size (24 oz, decaf)<span
                     class="card__list-divider"
                   ></span>
                   $1.75
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Iced Coffee (16 oz)<span class="card__list-divider"></span>
                   $1.25
                 </li>
@@ -188,26 +188,26 @@
             </li>
             <li class="card">
               <h3 class="card__title">Espresso</h3>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Macchiato<span class="card__list-divider"></span>
                   $2.25
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Cortado<span class="card__list-divider"></span>
                   $2.5
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Mocha<span class="card__list-divider"></span>
                   $3
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Sunrise in the Bay Area<span
                     class="card__list-divider"
                   ></span>
@@ -217,38 +217,38 @@
             </li>
             <li class="card">
               <h3 class="card__title">Baker Goods</h3>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Almond Croissant<span class="card__list-divider"></span>
                   $2
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Banana Bread<span class="card__list-divider"></span>
                   $1.75
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Key Lime Pie<span class="card__list-divider"></span>
                   $3
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Blue Velvet Cake<span class="card__list-divider"></span>
                   $3.75
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Web Cookie<span class="card__list-divider"></span>
                   $2
                 </li>
               </ul>
-              <ul class="card__list-item">
-                <li>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Fresh Bug'uette<span class="card__list-divider"></span>
                   $0.25
                 </li>
@@ -272,8 +272,9 @@
               cups!
             </p>
           </div>
-          <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation_blurred"></div>
+          <div class="about__circle">
+            <div class="about__circle about__circle_animation_blurred"></div>
+          </div>
         </section>
       </main>
       <footer class="footer">
