--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             </p>
           </div>
           <div class="about__circle">
+            </div>
             <div class="about__circle about__circle_animation_blurred"></div>
           </div>
         </section>
