--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="outline">Specialty coffee</span> in the Triple Peaks
+          <span class="span__accent">Specialty coffee</span> in the Triple Peaks
           Library
         </h1>
         <p class="header__description">
