--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span__accent">Specialty coffee</span> in the Triple Peaks
+          <span class="header__span-accent">Specialty coffee</span> in the Triple Peaks
           Library
         </h1>
         <p class="header__description">
@@ -56,11 +56,11 @@
         />
         <div class="header__footer">
           <div>
-            <p class="hours">Hours:</p>
-            <p class="hours">Monday - Friday (10:00 - 19:00)</p>
-            <p class="hours">Saturday - Sunday (11:00 - 18:00)</p>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
           </div>
-          <p class="header__address">
+          <p class="header__paragraph">
             200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
