--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__span-accent">Specialty coffee</span> in the Triple Peaks
-          Library
+          <span class="header__span-accent">Specialty coffee</span> in the
+          Triple Peaks Library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
@@ -108,6 +108,7 @@
                   id="name"
                   class="form__input"
                   placeholder="Name Surname"
+                  required
                 />
               </label>
               <label for="number" class="form__label"
@@ -117,6 +118,7 @@
                   id="number"
                   class="form__input"
                   placeholder="1-8"
+                  required
                 />
               </label>
               <label for="date" class="form__label"
@@ -124,7 +126,8 @@
                 <input
                   type="datetime-local"
                   id="date"
-                  class="form__input form__input_datetime-local"
+                  class="form__input"
+                  required
                 />
               </label>
               <label for="email" class="form__label"
@@ -134,13 +137,18 @@
                   id="email"
                   class="form__input"
                   placeholder="email@email.com"
+                  required
                 />
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
             <label for="agree" class="form__label form__label_type_checkbox">
-              <input type="checkbox" id="agree" class="form__checkbox" />I agree
-              with the terms of use
+              <input
+                type="checkbox"
+                id="agree"
+                class="form__checkbox"
+                required
+              />I agree with the terms of use
             </label>
           </form>
         </section>
@@ -158,28 +166,20 @@
                   Regular<span class="card__list-divider"></span>
                   $1
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Large (16 oz)<span class="card__list-divider"></span>
                   $1.25
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   XL (20 oz)<span class="card__list-divider"></span>
                   $1.5
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Party-size (24 oz, decaf)<span
                     class="card__list-divider"
                   ></span>
                   $1.75
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Iced Coffee (16 oz)<span class="card__list-divider"></span>
                   $1.25
@@ -193,20 +193,14 @@
                   Macchiato<span class="card__list-divider"></span>
                   $2.25
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Cortado<span class="card__list-divider"></span>
                   $2.5
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Mocha<span class="card__list-divider"></span>
                   $3
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Sunrise in the Bay Area<span
                     class="card__list-divider"
@@ -222,32 +216,22 @@
                   Almond Croissant<span class="card__list-divider"></span>
                   $2
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Banana Bread<span class="card__list-divider"></span>
                   $1.75
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Key Lime Pie<span class="card__list-divider"></span>
                   $3
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Blue Velvet Cake<span class="card__list-divider"></span>
                   $3.75
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Web Cookie<span class="card__list-divider"></span>
                   $2
                 </li>
-              </ul>
-              <ul class="card__list">
                 <li class="card__list-item">
                   Fresh Bug'uette<span class="card__list-divider"></span>
                   $0.25
@@ -272,10 +256,8 @@
               cups!
             </p>
           </div>
-          <div class="about__circle">
-            </div>
-            <div class="about__circle about__circle_animation_blurred"></div>
-          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
       <footer class="footer">
